--- a/aulas/79 DA PT JUN-2022 Python Recap.ipynb
+++ b/aulas/79 DA PT JUN-2022 Python Recap.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3fdc5f7f",
+   "id": "eb335249",
    "metadata": {
     "toc": true
    },
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f7541497",
+   "id": "c189c224",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "81f1d54d",
+   "id": "436295de",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c336d1e8",
+   "id": "1f90b69e",
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "03fad4b5",
+   "id": "7e83fbbe",
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "2ccc3f9a",
+   "id": "8235a721",
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "69cabe2d",
+   "id": "e3dc8c5a",
    "metadata": {},
    "outputs": [
     {
@@ -708,7 +708,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "8fb5ff33",
+   "id": "893a7fc4",
    "metadata": {},
    "outputs": [
     {
@@ -802,7 +802,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "0c818310",
+   "id": "aadbc640",
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +823,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "acb7d8c7",
+   "id": "51c3982e",
    "metadata": {},
    "outputs": [
     {
@@ -965,7 +965,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "68a648cf",
+   "id": "1229fb10",
    "metadata": {},
    "outputs": [
     {
@@ -986,7 +986,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "9ff6e9e5",
+   "id": "57c780c6",
    "metadata": {},
    "outputs": [
     {
@@ -1007,7 +1007,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "a31b2b04",
+   "id": "0a2c449e",
    "metadata": {},
    "outputs": [
     {
@@ -1028,7 +1028,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "ac43d06e",
+   "id": "1a274ae1",
    "metadata": {},
    "outputs": [
     {
@@ -1052,7 +1052,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "1077ac30",
+   "id": "2a5766c1",
    "metadata": {},
    "outputs": [
     {
@@ -1134,7 +1134,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "088b0cf3",
+   "id": "1f75f735",
    "metadata": {},
    "outputs": [
     {
@@ -1156,7 +1156,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "552e359b",
+   "id": "e78f0716",
    "metadata": {},
    "outputs": [
     {
@@ -1188,7 +1188,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "dddbb803",
+   "id": "293995f2",
    "metadata": {},
    "outputs": [
     {
@@ -1206,7 +1206,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "454d2e3b",
+   "id": "bf60a469",
    "metadata": {},
    "outputs": [
     {
@@ -1358,7 +1358,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "6f7d7f96",
+   "id": "4667c1af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1390,7 +1390,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "433736be",
+   "id": "be4c6cdb",
    "metadata": {},
    "outputs": [
     {
@@ -1426,7 +1426,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "e400bf1d",
+   "id": "313b1b77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1470,7 +1470,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "6661ef5e",
+   "id": "ef4c8ce0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1480,7 +1480,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "a408fcaa",
+   "id": "2b822f4a",
    "metadata": {},
    "outputs": [
     {
@@ -1501,7 +1501,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "3cfc14e7",
+   "id": "4f17351a",
    "metadata": {},
    "outputs": [
     {
@@ -1575,7 +1575,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "2ceadbb2",
+   "id": "6e5e9c0d",
    "metadata": {},
    "outputs": [
     {
@@ -1606,7 +1606,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "d0249114",
+   "id": "783306ec",
    "metadata": {},
    "outputs": [
     {
@@ -1687,7 +1687,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "7c0df7c7",
+   "id": "12d4fb78",
    "metadata": {},
    "outputs": [
     {
@@ -1786,7 +1786,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "c7e07a3d",
+   "id": "a55e0628",
    "metadata": {},
    "outputs": [
     {
@@ -1814,6 +1814,48 @@
     "\n",
     "Utilizando o que aprendemos hoje, construa um algoritmo para desempacotar uma lista de profundidade arbitrária!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "id": "bb473a98",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 2, 3, 4, 5, 2, 3, 4, 5, 6, 1, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista = [1,[1,2, [3, 4, 5]], [2,3, [4, 5, 6, [1]]], [1]]\n",
+    "lista_chata = []\n",
+    "for item in lista:\n",
+    "    if type(item) != list:\n",
+    "        lista_chata.append(item)\n",
+    "    new_item = item\n",
+    "    while type(new_item) == list:\n",
+    "        current_item = new_item\n",
+    "        for newer_item in new_item:\n",
+    "            if type(newer_item) == list:\n",
+    "                new_item = newer_item\n",
+    "            else:\n",
+    "                lista_chata.append(newer_item)\n",
+    "        if current_item == new_item:\n",
+    "            break\n",
+    "            \n",
+    "print(lista_chata)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1bd8afe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
