Upload da Aula de 2022 06 28

--- a/aulas/79 DA PT JUN-2022 List Comprehensions.ipynb
+++ b/aulas/79 DA PT JUN-2022 List Comprehensions.ipynb
@@ -15,13 +15,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 36, 100, 576, 1764]\n"
+     ]
+    }
+   ],
    "source": [
     "# crie uma lista que tenha os número de outra lista ao quadrado\n",
     "lista_orig = [1, 2, 6, 10, 24, 42]\n",
+    "\n",
     "lista_vazia = []\n",
+    "\n",
     "for i in lista_orig:\n",
     "    lista_vazia.append(i ** 2)\n",
     "\n",
@@ -39,27 +49,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-03T14:42:07.887522Z",
      "start_time": "2020-06-03T14:42:07.883533Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 36, 100, 576, 1764]\n"
+     ]
+    }
+   ],
    "source": [
     "lista_orig = [1, 2, 6, 10, 24, 42]\n",
-    "new_lc = [item**2 for item in lista_orig]\n",
+    "\n",
+    "new_lc = [\n",
+    "    item**2 # o que eu quero fazer\n",
+    "    for item in lista_orig # no que eu quero fazer\n",
+    "]\n",
+    "\n",
+    "new_lc = [item ** 2 for item in lista_orig]\n",
+    "\n",
     "print(new_lc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1.0,\n",
+       " 1.4142135623730951,\n",
+       " 2.449489742783178,\n",
+       " 3.1622776601683795,\n",
+       " 4.898979485566356,\n",
+       " 6.48074069840786]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "[item for item in range(10)]"
+    "[item for item in lista_orig]"
    ]
   },
   {
@@ -73,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,28 +142,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 4, 9, 16, 25, 36, 49, 64, 81]\n"
+     ]
+    }
+   ],
    "source": [
     "print(new_lc)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Podemos construir filtros complexos utilizando todos os operadores lógicos que usamos em condicionais normais:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_lc = [x for x in range(10) if x > 5 or x < 2]\n",
-    "print(new_lc)"
+    "def equacao(x):\n",
+    "    return x ** 2 * 2 + 14"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[14, 16, 22, 32, 46, 64, 86, 112, 142, 176]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[item for item in range(10)]"
    ]
   },
   {
@@ -132,18 +203,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-03T14:49:13.891051Z",
      "start_time": "2020-06-03T14:49:13.887055Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 10, 20]\n"
+     ]
+    }
+   ],
    "source": [
+    "lista_orig = [2, 4, 5, 6, 7, 10, 20]\n",
     "new_list = []\n",
     "\n",
-    "for item in range(10):\n",
+    "for item in lista_orig:\n",
     "    if item % 2 == 0:\n",
     "        new_list.append(item)\n",
     "        \n",
@@ -161,16 +241,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-03T14:51:30.490979Z",
      "start_time": "2020-06-03T14:51:30.487961Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 10, 20]\n"
+     ]
+    }
+   ],
    "source": [
-    "new_lc = [x for x in range(10) if x % 2 == 0]\n",
+    "new_lc = [\n",
+    "    x # o que eu quero fazer\n",
+    "    for x in lista_orig # os elementos sobre os quais eu quero fazer\n",
+    "    if x % 2 == 0] # como eu filtro esses elementos\n",
+    "\n",
+    "[x for x in lista_orig if x % 2 == 0]\n",
+    "\n",
     "print(new_lc)"
    ]
   },
@@ -183,14 +277,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-03T14:52:05.976206Z",
      "start_time": "2020-06-03T14:52:05.971216Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 4, 16, 36, 64]\n"
+     ]
+    }
+   ],
    "source": [
     "new_list = []\n",
     "\n",
@@ -203,22 +305,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-03T14:53:07.801931Z",
      "start_time": "2020-06-03T14:53:07.796944Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 4, 16, 36, 64]\n"
+     ]
+    }
+   ],
    "source": [
-    "new_lc = [x ** 2 for x in range(10) if x % 2 == 0]\n",
+    "new_lc = [\n",
+    "    x ** 2 \n",
+    "    for x in range(10) \n",
+    "    if x % 2 == 0\n",
+    "]\n",
+    "\n",
     "print(new_lc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,9 +354,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Woop!', 'Woop!', 'Woop!', 'Woop!', 'Woop!']\n"
+     ]
+    }
+   ],
    "source": [
     "new_lc = []\n",
     "\n",
@@ -254,11 +377,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['BOOOO!', 'BOOOO!', 'BOOOO!', 'BOOOO!', 'BOOOO!']\n"
+     ]
+    }
+   ],
    "source": [
-    "new_lc = [gosto_de_pares(x) for x in range(10) if x % 2 == 0]\n",
+    "new_lc = [gosto_de_pares(x) for x in range(10) if x % 2 != 0]\n",
     "print(new_lc)"
    ]
   },
@@ -275,14 +406,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-03T15:09:43.009113Z",
      "start_time": "2020-06-03T15:09:43.005124Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6, 7, 8, 6, 8]\n"
+     ]
+    }
+   ],
    "source": [
     "list_of_lists = [[1,2,3,4], [5,6,7,8], [1,3,6,8]]\n",
     "my_results = []\n",
@@ -291,7 +430,7 @@
     "    for item in lista:\n",
     "        if item > 5:    \n",
     "            my_results.append(item)\n",
-    "#\n",
+    "\n",
     "print(my_results)"
    ]
   },
@@ -312,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,9 +465,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[6, 7, 8]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list_of_lists = [[1,2,3,4], [5,6,7,8], [6,8]]\n",
+    "[item \n",
+    " for lista in list_of_lists \n",
+    " for item in lista \n",
+    " if item > 5 and len(lista) > 2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6, 7, 8, 6, 8]\n"
+     ]
+    }
+   ],
    "source": [
     "print(new_lc)"
    ]
@@ -342,11 +513,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[6, 7, 8, 6, 8]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "new_lc = [item for lista in list_of_lists for item in lista  if item > 5]"
+    "new_lc = [item for lista in list_of_lists for item in lista  if item > 5]\n",
+    "new_lc"
    ]
   },
   {
@@ -360,14 +543,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-03T15:11:55.148634Z",
      "start_time": "2020-06-03T15:11:55.142650Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "[0, 0, 0, 0, 0, 1, 1, 1, 1, 1]\n"
+     ]
+    }
+   ],
    "source": [
     "lst = []\n",
     "for item in range(10):\n",
@@ -375,25 +567,36 @@
     "        lst.append(0)\n",
     "    else:\n",
     "        lst.append(1)\n",
+    "        \n",
     "print(list(range(10)))\n",
     "print(lst)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-03T15:12:45.198991Z",
      "start_time": "2020-06-03T15:12:45.194006Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "[0, 0, 0, 0, 0, 1, 1, 1, 1]\n"
+     ]
+    }
+   ],
    "source": [
     "new_lc = [\n",
-    "    0 if i < 5 \n",
-    "    else 1 \n",
-    "    for i in range(10)\n",
+    "    0 if i < 5 # o que quero fazer\n",
+    "    else 1     # o que quero fazer\n",
+    "    for i in range(10) # percorre range(10), é o meu conjunto\n",
+    "    if i < 9\n",
     "    ]\n",
     "print(list(range(10)))\n",
     "print(new_lc)"
@@ -410,9 +613,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "lat_long = (-17, 29)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-17\n"
+     ]
+    }
+   ],
+   "source": [
+    "lat, long = lat_long\n",
+    "print(lat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "29\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(long)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[361, 1728, 20736, 225]\n"
+     ]
+    }
+   ],
    "source": [
     "lista_uplas = [(19, 2), (12, 3), (12, 4), (15, 2)]\n",
     "lista_vazia = []\n",
@@ -432,9 +687,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[361, 1728, 20736, 225]\n"
+     ]
+    }
+   ],
    "source": [
     "lista_uplas = [(19, 2), (12, 3), (12, 4), (15, 2)]\n",
     "\n",
@@ -461,14 +724,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-03T15:13:51.770836Z",
      "start_time": "2020-06-03T15:13:51.765850Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['.DS_Store', 'knn.png', 'PLS.png', 'boosting.png', 'sample_1.csv', 'sample_2.csv', 'ensemble.png', 'sample_3.csv', 'sample_2.txt', 'sample_3.txt', 'sample_1.txt']\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "lista_arquivos = os.listdir('data/arquivos/')\n",
@@ -484,12 +755,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "True\n",
+      "True\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "['sample_1.csv', 'sample_2.csv', 'sample_3.csv']\n"
+     ]
+    }
+   ],
    "source": [
     "lista_csv = []\n",
     "for file in lista_arquivos:\n",
+    "    #print(file.lower().endswith('csv'))\n",
     "    if file.lower().endswith('csv'):\n",
     "        lista_csv.append(file)\n",
     "\n",
@@ -505,11 +796,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['sample_1.csv', 'sample_2.csv', 'sample_3.csv']\n"
+     ]
+    }
+   ],
    "source": [
-    "lista_csv = [file for file in lista_arquivos if file.lower().endswith('csv')]\n",
+    "lista_csv = [file \n",
+    "             for file in lista_arquivos \n",
+    "             if file.lower().endswith('csv')]\n",
     "print(lista_csv)"
    ]
   },
@@ -526,12 +827,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('S', 'O'), ('S', 'L'), ('N', 'O'), ('N', 'O'), ('S', 'O')]\n"
+     ]
+    }
+   ],
    "source": [
     "lista_coords = [(-19, -36), (-37, 40), (22, -37), (51, -7), (33, 22), (-39, -8)]\n",
     "lista_hem = []\n",
+    "\n",
     "for lat, long in lista_coords:\n",
     "    if lat < 0:\n",
     "        hem_lat = 'S'\n",
@@ -558,12 +868,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# DESAFIO!"
+    "lista_coords = [(-19, -36), (-37, 40), (22, -37), (51, -7), (33, 22), (-39, -8)]\n",
+    "\n",
+    "def latlong_to_hem(lat, long):\n",
+    "    \n",
+    "    if lat < 0:\n",
+    "        hem_lat = 'S'\n",
+    "    else:\n",
+    "        hem_lat = 'N'\n",
+    "        \n",
+    "    if long < 0:\n",
+    "        hem_long = 'O'\n",
+    "    else:\n",
+    "        hem_long = 'L'\n",
+    "        \n",
+    "    return hem_lat, hem_long\n",
+    "\n",
+    "lista_hem = [latlong_to_hem(lat, long) for lat, long in lista_coords if lat < 0 or long < 0]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('S', 'L'), ('N', 'O'), ('N', 'O'), ('N', 'L')]"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lista_hem"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
