UPLOAD DA AULA DE 20220705

--- a/aulas/Projeto Python Game.ipynb
+++ b/aulas/Projeto Python Game.ipynb
@@ -34,8 +34,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "378ed9cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "2cdc22a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.array([[1,2], [3,4]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53dfe35e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b7758c64",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2]\n",
+      " [3 4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "bc35e039",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pretty_print_2x2(m):\n",
+    "    return f'{m[0,0]} | {m[0,1]}\\n------\\n{m[1,0]} | {m[1,1]}'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "5a9bca8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 | 2\n",
+      "------\n",
+      "3 | 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pretty_print_2x2(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "3e473181",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [1,2,3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "5927de10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a[0] = 2 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "92e628d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a[0,0] = 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "1df30faf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 | 2\n",
+      "------\n",
+      "3 | 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pretty_print_2x2(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1974269b",
    "metadata": {},
    "outputs": [],
    "source": []
