Alterações em aula

--- a/aulas/79 DA PT JUN-2022 Integração Python - MySQL.ipynb
+++ b/aulas/79 DA PT JUN-2022 Integração Python - MySQL.ipynb
@@ -55,7 +55,7 @@
    ],
    "source": [
     "user = \"root\"\n",
-    "password = \"swpmlu23-\"\n",
+    "password = \"23-\"\n",
     "url_banco = \"localhost\"\n",
     "nome_db = \"bank\"\n",
     "conn_str = f\"mysql+pymysql://{user}:{password}@{url_banco}/{nome_db}\"\n",
