Dados e Script para Aulas de Tableau

--- a/aulas/79 DA PT JUN-2022 API Wrappers.ipynb
+++ b/aulas/79 DA PT JUN-2022 API Wrappers.ipynb
@@ -12,6 +12,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 == 2 or 3"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1766,11 +1786,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sqlalchemy as sa\n",
     "load_dotenv('credentials/mysql.env')\n",
     "url_banco = \"localhost\"\n",
     "nome_db = \"spotify\"\n",
-    "conn_str = f\"mysql+pymysql://{os.getenv('MYSQL_USER')}:{os.getenv('MYSQL_PASS')}@{url_banco}/{nome_db}\"\n",
-    "engine = sa.create_engine(conn_str)"
+    "conn_str = f\"mysql+pymysql://root:sua_senha@{url_banco}/{nome_db}\"\n",
+    "engine = sa.create_engine(conn_str)\n",
+    "\n",
+    "tb_festivals.to_sql('fiifoofuu', engine, index = False, if_exists = 'replace')"
    ]
   },
   {
@@ -2456,7 +2479,7 @@
     }
    ],
    "source": [
-    "tb_festivals.dropna().to_sql('headliner', engine, index = False, if_exists = 'replace')"
+    "tb_festivals.to_sql('fiifoofuu', engine, index = False, if_exists = 'replace')"
    ]
   },
   {
@@ -4743,6 +4766,98 @@
    "metadata": {},
    "source": [
     "# Voltamos 21h28"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = '13,47%'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.13470000000000001"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "float(a.replace('%', '').replace('.', '').replace(',', '.'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "re.sub()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "abc = pd.DataFrame({'a' : [1, 1, 1, 2], 'b' : [1,2,3,1]})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.unique(abc[['a', 'b']].values)"
    ]
   },
   {
