Upload da aula de Matplotlib e Seaborn

--- a/aulas/79 DA PT JUN-2022 API Wrappers.ipynb
+++ b/aulas/79 DA PT JUN-2022 API Wrappers.ipynb
@@ -4862,6 +4862,108 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista_anos = [2019, 2020]\n",
+    "lista_meses = range(1, 13)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['2019-1',\n",
+       " '2020-1',\n",
+       " '2019-2',\n",
+       " '2020-2',\n",
+       " '2019-3',\n",
+       " '2020-3',\n",
+       " '2019-4',\n",
+       " '2020-4',\n",
+       " '2019-5',\n",
+       " '2020-5',\n",
+       " '2019-6',\n",
+       " '2020-6',\n",
+       " '2019-7',\n",
+       " '2020-7',\n",
+       " '2019-8',\n",
+       " '2020-8',\n",
+       " '2019-9',\n",
+       " '2020-9',\n",
+       " '2019-10',\n",
+       " '2020-10',\n",
+       " '2019-11',\n",
+       " '2020-11',\n",
+       " '2019-12',\n",
+       " '2020-12']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[f'{ano}-{mes}' for mes in lista_meses for ano in lista_anos]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2019-01\n",
+      "2019-02\n",
+      "2019-03\n",
+      "2019-04\n",
+      "2019-05\n",
+      "2019-06\n",
+      "2019-07\n",
+      "2019-08\n",
+      "2019-09\n",
+      "2019-10\n",
+      "2019-11\n",
+      "2019-12\n",
+      "2020-01\n",
+      "2020-02\n",
+      "2020-03\n",
+      "2020-04\n",
+      "2020-05\n",
+      "2020-06\n",
+      "2020-07\n",
+      "2020-08\n",
+      "2020-09\n",
+      "2020-10\n",
+      "2020-11\n",
+      "2020-12\n"
+     ]
+    }
+   ],
+   "source": [
+    "for ano in lista_anos:\n",
+    "    for mes in lista_meses:\n",
+    "\n",
+    "        if len(str(mes)) < 2:\n",
+    "            mes_str = \"0\" + str(mes)\n",
+    "        else:\n",
+    "            mes_str = mes\n",
+    "\n",
+    "        print(f'{ano}-{mes_str}')\n",
+    "        time.sleep(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
