--- a/projetos/Diamantes/Projeto Regressão - Diamantes.ipynb
+++ b/projetos/Diamantes/Projeto Regressão - Diamantes.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "648ed5ba",
    "metadata": {
     "ExecuteTime": {
@@ -29,8 +29,7 @@
     "import patsy, re\n",
     "import matplotlib.pyplot as plt\n",
     "import statsmodels.api as sm\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.feature_selection import RFECV\n"
+    "from sklearn.linear_model import LinearRegression\n"
    ]
   },
   {
@@ -1744,7 +1743,7 @@
     "    tb_d_clean[\"density\"] < density_sup\n",
     ")\n",
     "tb_d_clean = tb_d_clean[density_in].copy()\n",
-    "print(\"Linhas ao final do processo de limpeza:\", str(len(tb_d_clean)))"
+    "print(\"Linhas ao final do processo de limpeza:\", str(len(tb_d_clean)))\n"
    ]
   },
   {
@@ -1832,19 +1831,19 @@
    "outputs": [],
    "source": [
     "x_var = [\n",
-    "        \"log_carat\",\n",
-    "        \"log_carat_maior_2\",\n",
-    "        \"dist_carat\",\n",
-    "        \"grp_cla_I\",\n",
-    "        \"grp_cla_IF\",\n",
-    "        \"grp_cla_SI\",\n",
-    "        \"grp_cla_VS\",\n",
-    "        \"grp_col_Colorless\",\n",
-    "        \"grp_col_Tinted\",\n",
-    "        \"grp_cut_Fair\",\n",
-    "        \"grp_cut_Good\",\n",
-    "        \"grp_cut_Ideal\",\n",
-    "    ]\n",
+    "    \"log_carat\",\n",
+    "    \"log_carat_maior_2\",\n",
+    "    \"dist_carat\",\n",
+    "    \"grp_cla_I\",\n",
+    "    \"grp_cla_IF\",\n",
+    "    \"grp_cla_SI\",\n",
+    "    \"grp_cla_VS\",\n",
+    "    \"grp_col_Colorless\",\n",
+    "    \"grp_col_Tinted\",\n",
+    "    \"grp_cut_Fair\",\n",
+    "    \"grp_cut_Good\",\n",
+    "    \"grp_cut_Ideal\",\n",
+    "]\n",
     "\n",
     "X_train = tb_diamond_train[x_var]\n",
     "\n",
@@ -1904,7 +1903,7 @@
    ],
    "source": [
     "train_predict = np.exp(log_price_fit.predict(X_train))\n",
-    "np.sqrt(mean_squared_error(y_train, train_predict))"
+    "np.sqrt(mean_squared_error(y_train, train_predict))\n"
    ]
   },
   {
@@ -1952,8 +1951,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tb_diamond_train['log_price_mod1'] = log_price_fit.predict(X_train)\n",
-    "tb_diamond_train['error_m1'] = tb_diamond_train['log_price'] - tb_diamond_train['log_price_mod1']"
+    "tb_diamond_train[\"log_price_mod1\"] = log_price_fit.predict(X_train)\n",
+    "tb_diamond_train[\"error_m1\"] = (\n",
+    "    tb_diamond_train[\"log_price\"] - tb_diamond_train[\"log_price_mod1\"]\n",
+    ")\n"
    ]
   },
   {
@@ -1986,7 +1987,7 @@
     }
    ],
    "source": [
-    "sns.kdeplot(data = tb_diamond_train, x = 'error_m1')"
+    "sns.kdeplot(data=tb_diamond_train, x=\"error_m1\")\n"
    ]
   },
   {
@@ -2004,8 +2005,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "std_erro = tb_diamond_train['error_m1'].std()\n",
-    "tb_diamond_train['grp_erro'] = np.where(np.abs(tb_diamond_train['error_m1']) > (2*std_erro), 'Outlier', 'Normal')"
+    "std_erro = tb_diamond_train[\"error_m1\"].std()\n",
+    "tb_diamond_train[\"grp_erro\"] = np.where(\n",
+    "    np.abs(tb_diamond_train[\"error_m1\"]) > (2 * std_erro), \"Outlier\", \"Normal\"\n",
+    ")\n"
    ]
   },
   {
@@ -2028,7 +2031,7 @@
     }
    ],
    "source": [
-    "tb_diamond_train['grp_erro'].value_counts()"
+    "tb_diamond_train[\"grp_erro\"].value_counts()\n"
    ]
   },
   {
@@ -2069,11 +2072,11 @@
     }
    ],
    "source": [
-    "fig, ax = plt.subplots(2, 2, figsize = (10, 10))\n",
-    "sns.boxplot(data = tb_diamond_train, y = 'log_price', x = 'grp_erro', ax = ax[0][0])\n",
-    "sns.boxplot(data = tb_diamond_train, y = 'log_carat', x = 'grp_erro', ax = ax[0][1])\n",
-    "sns.boxplot(data = tb_diamond_train, y = 'depth', x = 'grp_erro', ax = ax[1][0])\n",
-    "sns.boxplot(data = tb_diamond_train, y = 'table', x = 'grp_erro', ax = ax[1][1])"
+    "fig, ax = plt.subplots(2, 2, figsize=(10, 10))\n",
+    "sns.boxplot(data=tb_diamond_train, y=\"log_price\", x=\"grp_erro\", ax=ax[0][0])\n",
+    "sns.boxplot(data=tb_diamond_train, y=\"log_carat\", x=\"grp_erro\", ax=ax[0][1])\n",
+    "sns.boxplot(data=tb_diamond_train, y=\"depth\", x=\"grp_erro\", ax=ax[1][0])\n",
+    "sns.boxplot(data=tb_diamond_train, y=\"table\", x=\"grp_erro\", ax=ax[1][1])\n"
    ]
   },
   {
@@ -2170,7 +2173,9 @@
     }
    ],
    "source": [
-    "pd.crosstab(tb_diamond_train['color'], tb_diamond_train['grp_erro'], normalize = 'columns')"
+    "pd.crosstab(\n",
+    "    tb_diamond_train[\"color\"], tb_diamond_train[\"grp_erro\"], normalize=\"columns\"\n",
+    ")\n"
    ]
   },
   {
@@ -2255,7 +2260,7 @@
     }
    ],
    "source": [
-    "pd.crosstab(tb_diamond_train['cut'], tb_diamond_train['grp_erro'], normalize = 'columns')"
+    "pd.crosstab(tb_diamond_train[\"cut\"], tb_diamond_train[\"grp_erro\"], normalize=\"columns\")\n"
    ]
   },
   {
@@ -2358,7 +2363,9 @@
     }
    ],
    "source": [
-    "pd.crosstab(tb_diamond_train['clarity'], tb_diamond_train['grp_erro'], normalize = 'columns')"
+    "pd.crosstab(\n",
+    "    tb_diamond_train[\"clarity\"], tb_diamond_train[\"grp_erro\"], normalize=\"columns\"\n",
+    ")\n"
    ]
   },
   {
@@ -2368,7 +2375,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tb_diamond_train['grade'] = tb_diamond_train['clarity'] + tb_diamond_train['color'] + tb_diamond_train['cut']"
+    "tb_diamond_train[\"grade\"] = (\n",
+    "    tb_diamond_train[\"clarity\"] + tb_diamond_train[\"color\"] + tb_diamond_train[\"cut\"]\n",
+    ")\n"
    ]
   },
   {
@@ -2401,9 +2410,11 @@
     }
    ],
    "source": [
-    "ct_grade_norm = pd.crosstab(tb_diamond_train['grade'], tb_diamond_train['grp_erro'], normalize = 'columns').reset_index()\n",
-    "ct_grade_norm['diff'] = (ct_grade_norm['Outlier'] - ct_grade_norm['Normal']) * 2251\n",
-    "sns.histplot(data = ct_grade_norm, x = 'diff')"
+    "ct_grade_norm = pd.crosstab(\n",
+    "    tb_diamond_train[\"grade\"], tb_diamond_train[\"grp_erro\"], normalize=\"columns\"\n",
+    ").reset_index()\n",
+    "ct_grade_norm[\"diff\"] = (ct_grade_norm[\"Outlier\"] - ct_grade_norm[\"Normal\"]) * 2251\n",
+    "sns.histplot(data=ct_grade_norm, x=\"diff\")\n"
    ]
   },
   {
@@ -2421,7 +2432,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lista_var_grade = list(ct_grade_norm.loc[ct_grade_norm['diff'] > 20, \"grade\"])"
+    "lista_var_grade = list(ct_grade_norm.loc[ct_grade_norm[\"diff\"] > 20, \"grade\"])\n"
    ]
   },
   {
@@ -2432,7 +2443,7 @@
    "outputs": [],
    "source": [
     "for dummy in lista_var_grade:\n",
-    "    tb_diamond_train[dummy] = np.where(tb_diamond_train['grade'] == dummy, 1, 0)\n"
+    "    tb_diamond_train[dummy] = np.where(tb_diamond_train[\"grade\"] == dummy, 1, 0)\n"
    ]
   },
   {
@@ -2485,11 +2496,13 @@
     "    clarity_dummies = pd.get_dummies(diamond_data[\"grp_clarity\"], prefix=\"grp_cla\")\n",
     "    color_dummies = pd.get_dummies(diamond_data[\"grp_color\"], prefix=\"grp_col\")\n",
     "    cut_dummies = pd.get_dummies(diamond_data[\"grp_cut\"], prefix=\"grp_cut\")\n",
-    "    diamond_data['grade'] = diamond_data['clarity'] + diamond_data['color'] + diamond_data['cut']\n",
+    "    diamond_data[\"grade\"] = (\n",
+    "        diamond_data[\"clarity\"] + diamond_data[\"color\"] + diamond_data[\"cut\"]\n",
+    "    )\n",
     "    for dummy in grade_dummy:\n",
-    "        diamond_data[dummy] = np.where(diamond_data['grade'] == dummy, 1, 0)\n",
-    "    diamond_data['color_D'] = np.where(diamond_data['color'] == 'D', 1, 0)\n",
-    "    diamond_data['clarity_SI2'] = np.where(diamond_data['clarity'] == 'SI2', 1, 0)\n",
+    "        diamond_data[dummy] = np.where(diamond_data[\"grade\"] == dummy, 1, 0)\n",
+    "    diamond_data[\"color_D\"] = np.where(diamond_data[\"color\"] == \"D\", 1, 0)\n",
+    "    diamond_data[\"clarity_SI2\"] = np.where(diamond_data[\"clarity\"] == \"SI2\", 1, 0)\n",
     "    return pd.concat(\n",
     "        [diamond_data, clarity_dummies, color_dummies, cut_dummies], axis=1\n",
     "    )\n"
@@ -2529,7 +2542,7 @@
     "tb_d_clean = tb_d_clean[density_in].copy()\n",
     "print(\"Linhas ao final do processo de limpeza:\", str(len(tb_d_clean)))\n",
     "\n",
-    "diamonds_test = pd.read_csv(\"tb_diamantes_teste.csv\")"
+    "diamonds_test = pd.read_csv(\"tb_diamantes_teste.csv\")\n"
    ]
   },
   {
@@ -2551,21 +2564,21 @@
     "tb_diamond_train[\"log_price\"] = np.log(tb_diamond_train[\"price\"])\n",
     "tb_diamond_test = transform_X_data_2(diamonds_test, lista_var_grade)\n",
     "x_var = [\n",
-    "        \"log_carat\",\n",
-    "        \"log_carat_maior_2\",\n",
-    "        \"dist_carat\",\n",
-    "        \"grp_cla_I\",\n",
-    "        \"grp_cla_IF\",\n",
-    "        \"grp_cla_SI\",\n",
-    "        \"grp_cla_VS\",\n",
-    "        \"grp_col_Colorless\",\n",
-    "        \"grp_col_Tinted\",\n",
-    "        \"grp_cut_Fair\",\n",
-    "        \"grp_cut_Good\",\n",
-    "        \"grp_cut_Ideal\",\n",
-    "        \"color_D\",\n",
-    "        \"clarity_SI2\"\n",
-    "    ]\n",
+    "    \"log_carat\",\n",
+    "    \"log_carat_maior_2\",\n",
+    "    \"dist_carat\",\n",
+    "    \"grp_cla_I\",\n",
+    "    \"grp_cla_IF\",\n",
+    "    \"grp_cla_SI\",\n",
+    "    \"grp_cla_VS\",\n",
+    "    \"grp_col_Colorless\",\n",
+    "    \"grp_col_Tinted\",\n",
+    "    \"grp_cut_Fair\",\n",
+    "    \"grp_cut_Good\",\n",
+    "    \"grp_cut_Ideal\",\n",
+    "    \"color_D\",\n",
+    "    \"clarity_SI2\",\n",
+    "]\n",
     "\n",
     "X_train = tb_diamond_train[x_var + lista_var_grade]\n",
     "X_test = tb_diamond_test[x_var + lista_var_grade]\n",
@@ -2597,7 +2610,7 @@
    "outputs": [],
    "source": [
     "from sklearn.tree import DecisionTreeRegressor\n",
-    "from sklearn.model_selection import GridSearchCV"
+    "from sklearn.model_selection import GridSearchCV\n"
    ]
   },
   {
@@ -2607,9 +2620,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "params = {'max_depth' : [int(x) for x in np.linspace(10, 300, 10)],\n",
-    "          'min_samples_leaf' : [int(x) for x in np.linspace(2, 500, 10)],\n",
-    "          'min_samples_split' : [int(x) for x in np.linspace(2, 500, 10)]}"
+    "params = {\n",
+    "    \"max_depth\": [int(x) for x in np.linspace(10, 300, 10)],\n",
+    "    \"min_samples_leaf\": [int(x) for x in np.linspace(2, 500, 10)],\n",
+    "    \"min_samples_split\": [int(x) for x in np.linspace(2, 500, 10)],\n",
+    "}\n"
    ]
   },
   {
@@ -2817,7 +2832,7 @@
     "cv_fit.fit(X_train, np.log(y_train))\n",
     "\n",
     "tb_diamond_test[\"price_predicted\"] = np.exp(cv_fit.predict(X_test))\n",
-    "tb_diamond_test.to_csv(\"dt_price_predicted.csv\")"
+    "tb_diamond_test.to_csv(\"dt_price_predicted.csv\")\n"
    ]
   },
   {
@@ -2835,7 +2850,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from catboost import CatBoostRegressor"
+    "from catboost import CatBoostRegressor\n"
    ]
   },
   {
@@ -12853,11 +12868,11 @@
     }
    ],
    "source": [
-    "cat_fit = CatBoostRegressor(iterations = 10000, max_depth= 8)\n",
+    "cat_fit = CatBoostRegressor(iterations=10000, max_depth=8)\n",
     "cat_fit.fit(X_train, np.log(y_train))\n",
     "\n",
     "tb_diamond_test[\"price_predicted\"] = np.exp(cv_fit.predict(X_test))\n",
-    "tb_diamond_test.to_csv(\"cat_price_predicted.csv\")"
+    "tb_diamond_test.to_csv(\"cat_price_predicted.csv\")\n"
    ]
   },
   {
@@ -12868,7 +12883,7 @@
    "outputs": [],
    "source": [
     "tb_diamond_test[\"price_predicted\"] = np.exp(cat_fit.predict(X_test))\n",
-    "tb_diamond_test.to_csv(\"cat_price_predicted.csv\")"
+    "tb_diamond_test.to_csv(\"cat_price_predicted.csv\")\n"
    ]
   },
   {
